[package]
name = "nucleo_c031_rtic_games"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features=["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
rtic = { version = "2.1.2", features = ["thumbv6-backend"]}
rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
defmt-rtt = { version = "0.4.0" }
defmt = { version = "0.3.2" }
portable-atomic = { version = "1", features = ["critical-section"] }

[dependencies.stm32c0]
git = "https://github.com/stm32-rs/stm32-rs-nightlies"
features = ["rt", "stm32c031"]

[dependencies.stm32c0xx-hal]
git = "https://github.com/stm32-rs/stm32c0xx-hal"
features = ["rt", "stm32c031"]

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false
opt-level = 2

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true
opt-level = "z"